# rt_timer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: rt_timer-example.cpp  timer-example.cpp
include/: rt_timer.hpp  template_cpp_project.hpp
include/rt_timer/: timer.hpp  timer_thread.hpp  types.hpp  win32_compatibility.hpp
include/template_cpp_project/: sine.hpp  types.hpp
src/: main.cpp
test/: rt_timer-test.cpp  sine-test.cpp  test_config.hpp  timer-test.cpp
test/matlab/: sine__test.m
